--- a/_toc.yml
+++ b/_toc.yml
@@ -2,6 +2,9 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: intro
+root: FAQ
 chapters:
-- file: FAQ
+- file: intro
+- file: FAQ/intro
+  sections:
+  - file: FAQ/markdown
