--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My sample book
+title: FAQs for Teaching Staff
 author: The Jupyter Book Community
 logo: logo.png
 
